--- a/src/components/ChromaGrid/ChromaGrid.css
+++ b/src/components/ChromaGrid/ChromaGrid.css
@@ -7,7 +7,7 @@
   grid-auto-rows: auto;
   justify-content: center;
   gap: 1rem;
-  max-width: 1500px;
+  max-width: 1200px;
   margin: 0 auto;
   padding: 1rem;
   box-sizing: border-box;
@@ -17,15 +17,29 @@
   --r: 220px;
 }
 
-@media (max-width: 1124px) {
+@media (min-width: 1024px) and (max-width: 1280px) {
   .chroma-grid {
+    position: relative;
+    width: 100%;
+    height: auto;
+    display: grid;
     grid-template-columns: repeat(auto-fit, minmax(320px, 320px));
-    gap: 0.5rem;
-    padding: 0.5rem;
-  }
+    grid-auto-rows: auto;
+    justify-content: center;
+    gap: 1rem;
+    max-width: 1500px;
+    margin: 0 auto;
+    padding: 1rem;
+    box-sizing: border-box;
+
+    --x: 50%;
+    --y: 50%;
+    --r: 220px;
+    }
 }
 
-@media (max-width: 480px) {
+
+@media (max-width: 1024px) {
   .chroma-grid {
     grid-template-columns: 320px;
     gap: 0.75rem;
